# Capture_PI

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
Application/: Capture_main.c  HTAMCGTest  Makefile  Makefile.am  Makefile.in  ads1298.c
Application/.deps/: Capture_main.Po  ads1298.Po  bcm2835.Po
Drivers/: Makefile  Makefile.am  Makefile.in
Drivers/.deps/: bcm2835.Po
Includes/: ADS1298.h  Capture_main.h  typedef.h
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
